--- a/src/components/CarouselMax/carouselmax.scss
+++ b/src/components/CarouselMax/carouselmax.scss
@@ -5,18 +5,28 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-    
+    -webkit-user-drag: none;
+    user-select: none;
+
+    & * {
+        -webkit-user-drag: none;
+        user-select: none; 
+    }
 
     & > .ribbon {
         display: flex;
         height: 100%;
         position: relative;
         width: fit-content;
+
         
         & .img-wrapper {
             display: inline-block;
             height: 100%;
             flex-shrink: 0;
+            position: relative;
+
+
             
             & .img__outer-container {
                 height: 100%;
@@ -24,10 +34,10 @@
                 position: relative;
                 border-radius: 5px;
 
+
                 & .img__inner-container {
                     height: 100%;
                     position: relative;
-                    
 
     
                     & img {
@@ -36,6 +46,14 @@
                         object-fit: cover;
                     }
                 }
+            }
+
+
+            & .image-extender {
+                position: absolute;
+                left: 10%;
+                bottom: 10%;
+                font-size: 40px;
             }
             
         }
