--- a/src/pages/Admin/Orders/orders.scss
+++ b/src/pages/Admin/Orders/orders.scss
@@ -203,6 +203,15 @@
         }
 
 
+        & .empty-informer {
+            display: block;
+            text-align: center;
+            font-size: 20px;
+            margin-top: 20%;
+
+        }
+
+
     }
 
 }
