input checker created for auth

--- a/src/pages/Admin/Orders/orders.scss
+++ b/src/pages/Admin/Orders/orders.scss
@@ -29,6 +29,10 @@
                     width: 200px;
                 }
             }
+
+            &.hidden {
+                display: none;
+            }
         }
 
     }
