--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -218,4 +218,28 @@ button {
 }
 
 
+.incorrect-value {
+    &::after {
+        content: attr(data-error-text);
+        font-size: 12px;
+        color: red;
+        position: absolute;
+        top: calc(100%);
+        left: 0;
+    }
+
+    & > input {
+        animation: inputshake 0.2s ease-in-out 0s 2;
+        background-color: rgb(238, 167, 167) !important;
+    }
+}
+
+@keyframes inputshake {
+    0% { margin-left: 0rem; }
+    25% { margin-left: 0.5rem; }
+    75% { margin-left: -0.5rem; }
+    100% { margin-left: 0rem; }
+}
+
+
 
