--- a/src/partials/Header/header.scss
+++ b/src/partials/Header/header.scss
@@ -10,6 +10,10 @@ header {
     z-index: 5000;
     border-bottom: 2px solid var(--main_vv);
     //box-shadow: 0px 3px 3px var(--main);
+    & * {
+        -webkit-user-drag: none !important;
+        user-select: none !important;  
+    }
     
     & .header__content {
         display: flex;
