--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -221,11 +221,12 @@ button {
 .incorrect-value {
     &::after {
         content: attr(data-error-text);
-        font-size: 12px;
-        color: red;
+        font-size: 14px;
+        color: var(--text);
         position: absolute;
         top: calc(100%);
         left: 0;
+        font-weight: 600;
     }
 
     & > input {
