--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -11,20 +11,12 @@
     color: var(--text);
     scroll-behavior: smooth;
 }
-/*
-html,body, h1,h2,h3,h4,h5,h6,p,span,div,nav,ul,li {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
-*/
+
 body {
     width: 100%;
-
     &.noscroll {
         overflow: hidden;
-        
     }
 }
 
@@ -33,6 +25,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
+
 
 h1 {
     font-size: 2.5rem;
@@ -145,7 +138,6 @@ p {
 }
 
 .container {
-    //border: 1px solid yellow;
     width: 100%;
     max-width: $lg;
     margin-left: auto;
@@ -181,31 +173,7 @@ p {
     display: none !important;
 }
 
-/*
-section {
-    flex-grow: 1;
-}
-*/
-/*
-.color_mixed {
-    background: conic-gradient(
-        hsl(360 100% 50%),
-        hsl(315 100% 50%),
-        hsl(270 100% 50%),
-        hsl(225 100% 50%),
-        hsl(180 100% 50%),
-        hsl(135 100% 50%),
-        hsl(90 100% 50%),
-        hsl(45 100% 50%),
-        hsl(0 100% 50%)
-      );
-}*/
-/*
-.color_transparent {
-    background: url(../img/color_transparent.jpg);
-    background-size: 30%;
-}
-*/
+
 .page {
     background-color: var(--bg);
     transition: background-color 1s;
@@ -229,7 +197,7 @@ button {
         font-weight: 600;
     }
 
-    & > input {
+    & > input, textarea {
         animation: inputshake 0.2s ease-in-out 0s 2;
         background-color: rgb(238, 167, 167) !important;
     }
@@ -242,5 +210,9 @@ button {
     100% { margin-left: 0rem; }
 }
 
+
+[data-selector=input-block] {
+    position: relative;
+}
 
 
