--- a/src/pages/Admin/ColorCreator/color-creator.scss
+++ b/src/pages/Admin/ColorCreator/color-creator.scss
@@ -190,7 +190,7 @@
         }
 
 
-        & .post {
+        & .button_post {
             margin-left: auto;
             margin-top: 30px;
             width: fit-content; 
