all pages updated

--- a/src/pages/Admin/CatalogCreator/catalog-creator.scss
+++ b/src/pages/Admin/CatalogCreator/catalog-creator.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.page_catalog-changer {
+.page_creator_catalog {
 
     & form {
         margin-top: 70px;
