--- a/src/pages/Admin/ContentCreator/content-creator.scss
+++ b/src/pages/Admin/ContentCreator/content-creator.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.page_splider-change {
+.page_creator_content {
 
     & form {
         margin-top: 70px;
