--- a/src/components/tiny/Selector/selector.scss
+++ b/src/components/tiny/Selector/selector.scss
@@ -5,19 +5,22 @@
     width: 100%;
     display: flex;
 
+    & > label {
+        margin-right: 10px;
+    }
+
     & > select {
         flex-grow: 1;   
         width: fit-content;
-        //height: 30px;
-        margin-left: 10px;
         font-size: 18px;
-        font-weight: 700;
+        font-weight: 600;
         border: 1px solid var(--main_vv);
         transition: border $transition_theme;
         outline: none;
         padding-left: 5px;
         padding-right: 10px;
         border-radius: 5px;
+        padding: 5px 10px;
     }
     
 }
