--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -23,37 +23,28 @@
             grid-template-rows: auto auto;
         }
 
-            & .item__product-link_img {
-            cursor: pointer;
-            align-self: center;
-
 
             & > .img__container {
+            cursor: pointer;
+            align-self: center;
+            width: 100%;
+            aspect-ratio: 1;
+            align-self: center;
+            border-radius: 5px;
+            overflow: hidden;
+            position: relative;
+
+
+            & img {
                 width: 100%;
-                aspect-ratio: 1;
-                align-self: center;
-                border-radius: 5px;
-                overflow: hidden;
-                position: relative;
-
-
-                & > img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
- 
+                height: 100%;
+                object-fit: cover;
             }
+ 
+            
         }
 
 
-
-
-        /*& .item__product-link {
-            display: block;
-            margin-right: auto;
-            display: flex;
-            align-items: stretch;*/
 
             & .item-descr__container {
                 display: flex;
