--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -111,7 +111,7 @@
                     }
                 }
 
-                & > .hider {
+                & > .input-hider {
                     height: 40px;
                     width: 40px;
                     position: absolute;
