--- a/src/components/ColorSelector/color-selector.scss
+++ b/src/components/ColorSelector/color-selector.scss
@@ -1,7 +1,7 @@
 @use '/src/assets/css/variables' as *;
 
 
-.color-picker {
+.color-selector {
     //margin-left: 10px;
     font-size: 18px;
     font-weight: 700;
