--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -13,6 +13,8 @@
         
         & > .feature {
             margin-top: 15px;
+            display: flex;
+            align-items: center;
 
             & > span, label, a {
                 font-size: 18px;
@@ -75,6 +77,12 @@
                         width: 100%;
                     }
                 }
+            }
+
+
+            & .fiber-link {
+                display: block;
+                margin-left: 10px;
             }
         }
 
