--- a/src/components/AddFiles/add-files.scss
+++ b/src/components/AddFiles/add-files.scss
@@ -78,6 +78,7 @@
             background-color: var(--main);
             transition: background-color $transition-theme;
             border-radius: 5px;
+            position: relative;
 
             & > .img__container {
                 height: 100px;
@@ -107,6 +108,21 @@
                 //word-break: break-all;
                 //hyphens:auto
                 word-break: break-all;
+            }
+
+
+
+            & > .filesToShow {
+                position: absolute;
+                top: 5px;
+                right: 5px;
+                border: 2px solid red;
+                border-radius: 50%;
+                height: 20px;
+                width: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
 
