--- a/src/components/Picker/picker.scss
+++ b/src/components/Picker/picker.scss
@@ -35,6 +35,7 @@
             border-radius: 5px;
             overflow: hidden;
             cursor: pointer;
+            position: relative;
             
             & img {
                 height: 100%;
@@ -44,6 +45,17 @@
 
             &.selected {
                 border: 3px solid $black;
+            }
+            
+            &.inactive::after {
+                content: "";
+                width: 200%;
+                height: 8%;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-45deg);
+                background-color: rgba(red, .6);
             }
         }
 
@@ -91,5 +103,6 @@
         }
 
     }
+
 
 }
