--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -51,6 +51,7 @@
                 width: 100%;
                 height: 65%;
                 position: relative;
+                overflow: hidden;
 
                 @include respond-to(md) {
                     height: 60%;
@@ -61,6 +62,18 @@
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
+                }
+
+
+                &.inactive::after {
+                    content: "";
+                    width: 200%;
+                    height: 8%;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%) rotate(-45deg);
+                    background-color: rgba(red, .6);
                 }
             }
     
