--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -84,6 +84,11 @@
                 display: block;
                 margin-left: 10px;
             }
+
+
+            &.text_simple {
+                display: block;
+            }
         }
 
 
