--- a/src/partials/Nav/nav.scss
+++ b/src/partials/Nav/nav.scss
@@ -159,12 +159,6 @@ $gap_to_text: 5px;
                                     text-align: center;
                                     cursor: pointer;
                                     position: relative;
-
-                                    .cart-informer__container {
-                                        position: absolute;
-                                        top: -7px;
-                                        left: 100%;
-                                    }
                     
                                     /*transform: scaleX(0);
                                     transition: transform $transition_subMenu 0s;*/
@@ -181,8 +175,6 @@ $gap_to_text: 5px;
 
 
                                 }
-
-
 
 
                             }
@@ -255,6 +247,13 @@ $gap_to_text: 5px;
                     border-radius: 20px;
                     border: 2px solid var(--main_vv);
 
+                }
+
+
+                & .cart-informer {
+                    position: absolute;
+                    top: -12px;
+                    left: calc(100% + 3px);
                 }
 
             }
@@ -634,6 +633,17 @@ $gap_to_text: 5px;
                 &.narrow {
                     width: auto;
                 }
+
+                & .cart-informer {
+                    position: absolute;
+                    top: -5px;
+                    left: 100%;
+
+                    & > span {
+                        font-size: 16px;
+                    }
+                }
+
             }
 
             & > .line {
