--- a/src/components/CartInformer/cart-informer-updater.scss
+++ b/src/components/CartInformer/cart-informer-updater.scss
@@ -6,7 +6,7 @@
     height: 100%;
     width: 100%;
     border-radius: 50%;
-    //background-color: var(--main_vv);
+    //background-color: var(--main_em);
     display: flex;
     align-items: center;
     justify-content: center;
