--- a/src/components/Delete/delete.scss
+++ b/src/components/Delete/delete.scss
@@ -28,7 +28,7 @@
     }
 
     & .confirmation__container {
-        background-color: var(--text_vv);
+        background-color: var(--text_reverse);
         padding: 5px;
         display: flex;
         flex-direction: column;
