--- a/src/components/News/news.scss
+++ b/src/components/News/news.scss
@@ -36,7 +36,7 @@
     
             h3 {
                 align-self: flex-start;
-                color: var(--main_vv);
+                color: var(--main_em);
                 //font-size: 24px;
                 font-weight: 700;
                 word-break: break-all;
