--- a/src/components/Unauthorized/unauthorized.scss
+++ b/src/components/Unauthorized/unauthorized.scss
@@ -11,6 +11,6 @@
     & > span {
         font-size: 22px;
         font-weight: 600;
-        color: var(--main_vv);
+        color: var(--main_em);
     }
 }
