--- a/src/pages/ContactUs/contact-us.scss
+++ b/src/pages/ContactUs/contact-us.scss
@@ -21,7 +21,7 @@
     
                 & > img {
                     width: 50%;
-                    box-shadow: 10px 10px 10px var(--main_vv);
+                    box-shadow: 10px 10px 10px var(--main_em);
                     z-index: 100;
                 }
             }
