--- a/src/pages/Fiber/fiber.scss
+++ b/src/pages/Fiber/fiber.scss
@@ -47,7 +47,7 @@
     
                 & h3 {
                     text-align: center;
-                    color: var(--main_vv);
+                    color: var(--main_em);
                 }
     
                 & > .features__container {
