--- a/src/pages/FibersCompare/FibersCompare.scss
+++ b/src/pages/FibersCompare/FibersCompare.scss
@@ -387,7 +387,7 @@ $k_xs: 0.65;
                     &_last {
                         border-bottom: none;
                         & > span {
-                            color: var(--main_vv);
+                            color: var(--main_em);
                             font-weight: 700;
                         }
                     }
