--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -56,7 +56,7 @@ footer {
             }
 
 
-            & .social_links {
+            & .social__links {
                 display: flex;
                 gap: 20px;
 
