--- a/src/assets/css/_base.scss
+++ b/src/assets/css/_base.scss
@@ -32,7 +32,7 @@ h1 {
     text-align: center;
     transition: color $transition_theme;
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--main_vv);
+    color: var(--main_em);
 
     @include respond-to(sm) {
         font-size: 32px;
@@ -47,9 +47,8 @@ h2 {
     font-size: 2rem;
     transition: color $transition_theme;
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--main_vv);
+    color: var(--main_em);
 
-    
     @include respond-to(sm) {
         font-size: 26px;
     }
@@ -59,10 +58,11 @@ h2 {
     }
 }
 
+
 h3 {
     font-size: 1.5rem;
     transition: color $transition_theme;
-    color: var(--main_vv);
+    color: var(--main_em);
 
     @include respond-to(sm) {
         font-size: 22px;
@@ -186,33 +186,9 @@ button {
 }
 
 
-.incorrect-value {
-    &::after {
-        content: attr(data-error-text);
-        font-size: 14px;
-        color: var(--text);
-        position: absolute;
-        top: calc(100%);
-        left: 0;
-        font-weight: 600;
-    }
-
-    & > input, textarea, select {
-        animation: inputshake 0.2s ease-in-out 0s 2;
-        background-color: rgb(238, 167, 167) !important;
-    }
-}
-
-@keyframes inputshake {
-    0% { margin-left: 0rem; }
-    25% { margin-left: 0.5rem; }
-    75% { margin-left: -0.5rem; }
-    100% { margin-left: 0rem; }
-}
 
 
 [data-selector=input-block] {
     position: relative;
 }
-
 
