--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,7 +6,34 @@ $xs: 480px;
 
 $black: #000;
 $white: #FFF;
+$brad_xl: 15px;
+$brad_lg: 10px;
+$brad_md: 5px;
+$brad_sm: 3px;
+
+
+$transition_base: .5s;
+$transition_nav_style: .5s ease-in-out;
+$transition_nav: .5s;
+$transition_theme: 1s;
+$transition_fast: .2s;
+$transition_slow: .8s;
+$transition_subMenu: 0.3s;
+$header_height: 60px;
+$preloader_speed_w: 2s;
+$nav_mobile_delay: 0.3s;
+
+//$transition_nav: .5s ease-in-out;
+//$transition_nav-time: .5s;
+//$transition_base: .5s;
+//$transition-theme: 1s;
+//$transition_gallery: 0.2s ease-out;
+
+
+
+
 $color_input_error: #ffa0a0;
+
 
 
 $text_basic: #333;
@@ -14,41 +41,30 @@ $text_selected: #EEE;
 $blue_light_1: #3D89B4;
 $bg: #F4EDDD;
 
-$nav: #333;
-$nav_selected: #EEE;
-
-$transition_nav: .5s ease-in-out;
-$transition_nav-time: .5s;
-$transition_fast: .2s;
-$transition_base: .5s;
-$transition_nav_menu: .5s ease-in-out;
-$transition-theme: 1s;
-$transition_gallery: 0.2s ease-out;
 $light: #EBEBEB;
 $dark: #286181;
-//$color_error: rgb(255, 65, 65);
-$color_danger: red;
-$color_success: green;
-$header_height: 80px;
-//$nav_height: 550px;
-$transition_subMenu: 0.3s;
-$preloader_speed_w: 2s;
-$nav_mobile_delay: 0.3s;
+$color_danger: rgb(224, 54, 54);
+$color_success: rgb(65, 156, 65);
+
 
 body {
+    --text_nav: #444;
+    --text_nav_selected: #DDD;
+    --bg: rgb(235, 235, 235);
+    --input_error: #ffa0a0;
     --main: rgb(100, 181, 245);
     --main_RGB: 100, 181, 245;
-    --main_vv: rgb(7, 113, 184);
-    --main_vv_RGB: 7, 113, 184;
-    --bg: rgb(235, 235, 235);
-    --text: #1F2833;
-    --text_muted: #1F2833;
-    --text_vv: #EBEBEB;
-    --text_contrast: #F3F3F3;
-    --inputs-bg: #EBEBEB;
+    --main_em: rgb(7, 113, 184);
+    --main_em_RGB: 7, 113, 184;
+    --text: rgb(31, 40, 51);
+    --text_reverse: #EBEBEB;
+
     --lang-selector: #EBEBEB;
     --lang-text: #286181;
-    --lang-text_add: #286181;
+    --lang-text_add: #0e4e70;
+    
+    --inputs-bg: #EBEBEB;
+
     --error: rgb(209, 16, 16);
 
     --svg_minus: rgb(131, 131, 131);
@@ -56,65 +72,61 @@ body {
     --svg_pro: rgb(66, 173, 73);
     --svg_con: rgb(255, 10, 0);
     --svg_question: rgb(90, 90, 90);
-
     --border_compare: rgb(163, 163, 163);
-    --text_mild: rgba(31, 40, 51, 0.5);
-
     --rating_bg: rgb(196, 196, 196);
     --rating_border_inner: rgb(163, 163, 163); //rgb(75, 75, 75);
     --rating_value_blue: rgb(86, 88, 194);
     --rating_value_green: rgb(64, 170, 54);
     --rating_value_red: rgb(228, 43, 43);
     --rating_value_lilac: rgb(167, 90, 179);
-
-
     --compare_selected: rgb(190, 190, 190); 
     --compare_mark: rgb(46, 46, 46);
-
     --rating_money: rgb(168, 168, 136);
 
+    --cart_informer: #d6e041;
  }
+
+
+
  body.dark {
+    --text_nav: #EEE;
+    --text_nav_selected: #222;
+    --bg: rgb(31, 40, 51);
+    --input_error: #ffa0a0;
     --main: #0771b8;//rgb(13, 96, 173);
     --main_RGB: 7, 113, 184;
-    --main_vv: #64b5f5;    
-    --main_vv_RGB: 100, 181, 245;
-    --bg: rgb(31, 40, 51);
-
-    --text: rgb(255, 255, 255);
-    --text_mild: rgb(235, 235, 235);
-    --text_vv: #1F2833;
-    --text_contrast: #1F2833;
-
-    --inputs-bg: #d6e3e6;
+    --main_em: #64b5f5;    
+    --main_em_RGB: 100, 181, 245;
+    --text: rgb(233, 233, 233);
+    --text_reverse: #1F2833;
+    
     --lang-selector: #EBEBEB;
     --lang-text: #286181;
     --lang-text_add: #EBEBEB;
+    
+    --inputs-bg: #d6e3e6;
+
     --error: rgb(252, 71, 71);
-
-
 
     --svg_minus: rgb(163, 163, 163);
     --svg_plus: rgb(66, 173, 73);
     --svg_pro: rgb(66, 173, 73);
     --svg_con: rgb(255, 10, 0);
     --svg_question: rgb(163, 163, 163);
-
     --border_compare: rgb(109, 109, 109);
-    --text_mild: rgba(235, 235, 235, 0.5);
-
     --rating_bg: rgb(65, 65, 65);
     --rating_border_inner: rgb(180, 180, 180);
     --rating_value_blue: rgb(80, 100, 189);
     --rating_value_green: rgb(11, 119, 1);
     --rating_value_red: rgb(177, 0, 0);
     --rating_value_lilac: rgb(135, 48, 146);
-
     --compare_selected: rgb(52, 65, 80);
     --compare_mark: rgb(218, 218, 218);
-
     --rating_money: rgb(185, 185, 141);
+
+    --cart_informer: #d6e041;
  }
+
 
 
 @mixin  respond-to($width) {
