--- a/src/components/AmountChanger/amount-changer.scss
+++ b/src/components/AmountChanger/amount-changer.scss
@@ -12,7 +12,7 @@
         outline: none;
         width: 50px;
         text-align: end;
-        border: 1px solid var(--main_vv);
+        border: 1px solid var(--main_em);
         background-color: var(--text_contrast);
         color: var(--text);
         transition: color 1s, background-color $transition_theme, border $transition_theme;
