--- a/src/components/Auth/auth.scss
+++ b/src/components/Auth/auth.scss
@@ -2,14 +2,16 @@
 
 
 .login {
-
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-self: flex-start;
+    margin-top: 100px;
     padding: 30px;
     background-color: var(--main);
-    border-radius: 5px;
+    border-radius: $brad_lg;
+    
+    @include respond-to(xs) {
+        width: 90%;
+        border-radius: $brad_md;
+    }
 
 
     & .form__container {
@@ -29,8 +31,14 @@
                 color: var(--text);
                 border: none;
                 position: relative;
-                font-size: 18px;
-                font-weight: 600;
+                font-size: 1.2rem;
+                font-weight: 700;
+
+                @include respond-to(sm) {
+                    font-size: 1rem;
+                }
+
+
 
                 &::after {
                     content: '';
@@ -59,57 +67,7 @@
             display: flex;
             flex-direction: column;
 
-            & .input-block {
-                width: 100%;
-                padding-top: 20px;
-                
-                @include respond-to(sm) {
-                    margin-top: 10px;
-                }
-
-                &.message-block {
-                    flex-grow: 1;
-                    display: flex;
-                    flex-direction: column;
-                }
-
-
-                & label {
-                    display: block;
-                    font-size: 16px;
-                    transition: color $transition_theme;
-                    font-weight: 600;
-                }
-
-                & .input-element {
-                    margin-top: 5px;
-                    font-size: 20px;
-                    color: $black;
-                    font-weight: 600;
-                    padding: 5px 10px;
-                    width: 100%;
-                    border-radius: 4px;
-                    background-color: var(--inputs-bg);
-                    transition: background-color $transition-theme, border $transition-theme;
-                    outline: none;
-                    border: 2px solid transparent;
-
-                    &:focus{
-                        border: 2px solid $dark;
-                    }
-
-                }
-
-
-                &.error {
-                    & > label {
-                        //color: $color_danger;
-                    }
-
-                    & > input {
-                        background-color: $color_input_error;
-                    }
-                }
+            & .block_input {
 
                 & > .input-hider {
                     height: 40px;
@@ -117,13 +75,21 @@
                     position: absolute;
                     right: 10px;
                     bottom: 0px;
+
+                    @include respond-to(sm) {
+                        scale: 0.8;
+                        bottom: -3px;
+                    }
+
+                    @include respond-to(sm) {
+                        scale: 0.7;
+                        bottom: -4px;
+                    }
+
                     & .eye {
                         stroke: $black;
                     }
                 }
-
-
-
             }
 
             & .errors__container {
@@ -142,7 +108,6 @@
 
 
                 & > ul {
-                    
                     & > li {
                         margin-left: 1em;
                         font-weight: 600;
@@ -163,13 +128,14 @@
                 gap: 20px;
                 margin-top: 40px;
 
-                & > button {
-                    background-color: var(--main_vv);
-                    color: var(--text_vv);
+                @include respond-to(xs) {
+                    flex-direction: column;
+                }
 
-                    &:hover {
-                        box-shadow: 0px 0px 15px 0px var(--main_vv);;
-                    }
+                & > button {
+                    width: 100%;
+
+
 
                     &.disabled {
                         opacity: 0.5;
