--- a/src/components/CartContent/cart-content.scss
+++ b/src/components/CartContent/cart-content.scss
@@ -11,7 +11,7 @@
         grid-template-columns: 120px 1fr auto;
         grid-template-rows: auto;
         //justify-content: flex-start;
-        border-bottom: 1px solid var(--main_vv);
+        border-bottom: 1px solid var(--main_em);
         transition: border $transition_theme;
         padding: 20px 0px;
         //width: 100%;
