--- a/src/components/CatalogIntro/catalog-intro.scss
+++ b/src/components/CatalogIntro/catalog-intro.scss
@@ -6,7 +6,7 @@
     width: 100%;
 
     h1 {
-        color: var(--main_vv);
+        color: var(--main_em);
     }
 
     .descr {
@@ -21,7 +21,7 @@
         }
         
         & h2 {
-            color: var(--main_vv);
+            color: var(--main_em);
         }
         
         .img__container {
