--- a/src/components/Featurer/featurer.scss
+++ b/src/components/Featurer/featurer.scss
@@ -26,7 +26,7 @@
             @include respond-to(md) {
                 grid-template-columns: 1fr 1fr 40px;
                 gap: 20px 20px;
-                border-bottom: 1px solid var(--main_vv);
+                border-bottom: 1px solid var(--main_em);
                 padding-bottom: 20px;
 
                 &:last-child {
@@ -55,7 +55,7 @@
                 padding-right: 10px;
                 align-self: self-end;
                 justify-self: end;
-                background-color: var(--main_vv);
+                background-color: var(--main_em);
             }
         }
 
@@ -66,7 +66,7 @@
         margin-top: 20px;
         margin-right: auto;
         margin-left: auto;
-        background-color: var(--main_vv);
+        background-color: var(--main_em);
 
         @include respond-to(xs) {
             width: 100%;
