--- a/src/components/FiberPreview/fiber-preview.scss
+++ b/src/components/FiberPreview/fiber-preview.scss
@@ -37,7 +37,7 @@
             &:first-child {
                 margin-top: 0;
                 font-size: 20px;
-                color: var(--main_vv);
+                color: var(--main_em);
                 font-weight: 900;
             }
         }
