--- a/src/components/Gallery/gallery.scss
+++ b/src/components/Gallery/gallery.scss
@@ -21,7 +21,7 @@
         //margin: 0px 4%;
         //margin-bottom: 40px;
         cursor: pointer;
-        border: 1px solid var(--main_vv);
+        border: 1px solid var(--main_em);
         border-radius: 5px;
         transition: border $transition_theme !important;
 
@@ -83,7 +83,7 @@
                 & .name {
                     display: inline-block;
                     font-size: 20px;
-                    color: var(--main_vv);
+                    color: var(--main_em);
                     transition: color $transition_theme;
                     font-weight: 700;
                     text-align: left;
@@ -114,7 +114,7 @@
 
 
         &:hover {
-            border-color: 1px solid var(--main_vv);
+            border-color: 1px solid var(--main_em);
             transition: border $transition_fast !important;
         }
 
