--- a/src/components/InfoSlide/info-slide.scss
+++ b/src/components/InfoSlide/info-slide.scss
@@ -24,7 +24,7 @@
             & > svg {
                 width: 20px;
                 height: 20px;
-                stroke: var(--main_vv);
+                stroke: var(--main_em);
             }
         }
     }
