--- a/src/components/LangSwitcher/langSwitcher.scss
+++ b/src/components/LangSwitcher/langSwitcher.scss
@@ -19,7 +19,7 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
     height: $lang-height;
     border-radius: 20px;
     left: 20px;
-    top: 100px;
+    top: 80px;
     display: flex;
     justify-content: space-between;
     padding-left: calc($lang-height - $blob-size_big);
@@ -28,41 +28,39 @@ $transition_lang: cubic-bezier(0.51, 0.06, 0.56, 1.37) .2s;
     text-transform: uppercase;
     background-color: var(--main);
     font-weight: 700;
-    z-index: 5500;
+    z-index: 5000;
     transition: background-color $transition_theme, left $nav_mobile_delay, opacity $nav_mobile_delay;
     & * {
         -webkit-user-drag: none !important;
         user-select: none !important;  
     }
-
+    
+    @include respond-to(md) {
+        top: 75px;
+        transform: scale(0.85);
+    }
     
     @include respond-to(sm) {
-        transform: scale(0.85);
-        top: 600px;
-        left: 25%;
-        top: calc($header_height + 55px);
-        transition: background-color $transition_theme, left $nav_mobile_delay $transition_nav, opacity $nav_mobile_delay $transition_nav;
+        transform: scale(0.70);
+        position: relative;
+        left: initial;
+        right: initial;
+        top: initial;
     }
     
     @include respond-to(xs) {
-        transform: scale(0.7);
+        transform: scale(0.6);
     }
     
     &.scrolled {
         left: -70px;
 
         @include respond-to(sm) {
-            left: 25%;
+            left: initial;
         }
     }
     
-    &.hide {
-        @include respond-to(sm) {
-            left: 75%;
-            opacity: 0;
-            transition: background-color $transition_theme, left $nav_mobile_delay, opacity $nav_mobile_delay;
-        }
-    }
+
     
 
 
