--- a/src/components/Picker/picker.scss
+++ b/src/components/Picker/picker.scss
@@ -4,7 +4,7 @@
 
 .items__container {
     width: 100%;
-    background-color: var(--main_vv);
+    background-color: var(--main_em);
     border-radius: 5px;
     padding: 30px 20px;
     margin-left: auto;
@@ -64,7 +64,7 @@
             margin-top: 10px;   
             font-size: 14px;
             word-break: break-word;
-            color: var(--text_vv);
+            color: var(--text_reverse);
             @include respond-to(sm) {
                 font-size: 10px;
            }
