--- a/src/components/ProductDetails/product-details.scss
+++ b/src/components/ProductDetails/product-details.scss
@@ -26,7 +26,7 @@
 
             & a {
                 text-decoration: underline !important;
-                color: var(--main_vv);
+                color: var(--main_em);
             }
 
             & > span:nth-of-type(2) {
@@ -46,7 +46,7 @@
                 margin-left: 10px;
                 font-size: 18px;
                 font-weight: 700;
-                border: 1px solid var(--main_vv);
+                border: 1px solid var(--main_em);
                 transition: border $transition_theme;
                 outline: none;
                 padding-left: 5px;
