--- a/src/components/Selector/selector.scss
+++ b/src/components/Selector/selector.scss
@@ -15,7 +15,7 @@
         width: fit-content;
         font-size: 18px;
         font-weight: 600;
-        border: 1px solid var(--main_vv);
+        border: 1px solid var(--main_em);
         transition: border $transition_theme;
         outline: none;
         padding-left: 5px;
