--- a/src/components/Spliders/Preview/splider-preview.scss
+++ b/src/components/Spliders/Preview/splider-preview.scss
@@ -59,7 +59,7 @@
 
                 &:hover {
                     & svg {
-                        fill: var(--main_vv);//map.get($dark, "nav_selected");
+                        fill: var(--main_em);//map.get($dark, "nav_selected");
                     }
                 }
 
@@ -135,7 +135,7 @@
                 left: 50%;
                 width: 20%;
                 height: 1px;
-                background-color: var(--main_vv);
+                background-color: var(--main_em);
                 transform: translate(-50%, -50%);
     
                 @include respond-to(sm) {
@@ -172,7 +172,7 @@
 
                 &:hover {
                     & svg {
-                        fill: var(--main_vv);//map.get($dark, "nav_selected");
+                        fill: var(--main_em);//map.get($dark, "nav_selected");
                     }
                 }
 
@@ -210,7 +210,7 @@
                     //opacity: 1;
                     filter: brightness(1);
                     border: none;
-                    border: 3px solid var(--main_vv);
+                    border: 3px solid var(--main_em);
                     border-radius: 5px;
                 }
                 
