--- a/src/components/Spliders/Single/splider-single.scss
+++ b/src/components/Spliders/Single/splider-single.scss
@@ -44,12 +44,12 @@
                 & > svg {
                     width: 50px;
                     height: auto;
-                    fill: var(--main_vv);
+                    fill: var(--main_em);
                     transition: $transition_base;
                 }
                 &:hover {
                     & svg {
-                        fill: var(--main_vv);
+                        fill: var(--main_em);
                     }
                 }
  
@@ -96,7 +96,7 @@
                 margin: 0px 12px;
                 height: auto;
                 width: auto;
-                color: var(--main_vv);
+                color: var(--main_em);
                 font-weight: 700;
 
                 @include respond-to(xs) {
@@ -112,7 +112,7 @@
                     font-weight: 800;
                     transform: none;
                     color: var(--lang-text_add);
-                    //background-color: rgba(var(--main_vv_RGB), 0.95);
+                    //background-color: rgba(var(--main_em_RGB), 0.95);
                 }
             }
         }
