--- a/src/components/UserBlock/user-block.scss
+++ b/src/components/UserBlock/user-block.scss
@@ -9,7 +9,7 @@
     max-width: 50px;
     min-width: 50px;
     border-radius: 25px;
-    border: 2px solid var(--main_vv);
+    border: 2px solid var(--main_em);
     overflow: hidden;
     transition: max-width $transition-theme, background-color $transition_theme, right $transition_subMenu, transform $transition_subMenu, opacity $nav_mobile_delay;
     
@@ -42,13 +42,13 @@
             height: 35px;
             align-self: auto;
             border-radius: 25px;
-            background-color: var(--main_vv);
-            color: var(--text_vv);
+            background-color: var(--main_em);
+            color: var(--text_reverse);
             padding-left: 20px;
             padding-right: 20px;
 
             &:hover {
-                box-shadow: 0px 0px 15px 0px var(--main_vv);;
+                box-shadow: 0px 0px 15px 0px var(--main_em);;
             }
         }
 
