--- a/src/pages/Admin/CatalogCreator/catalog-creator.scss
+++ b/src/pages/Admin/CatalogCreator/catalog-creator.scss
@@ -34,7 +34,7 @@
                 @include respond-to(md) {
                     grid-template-columns: 1fr 1fr 40px;
                     gap: 20px 20px;
-                    border-bottom: 1px solid var(--main_vv);
+                    border-bottom: 1px solid var(--main_em);
                     padding-bottom: 20px;
 
                     &:last-child {
@@ -63,7 +63,7 @@
                     padding-right: 10px;
                     align-self: self-end;
                     justify-self: end;
-                    background-color: var(--main_vv);
+                    background-color: var(--main_em);
                 }
             }
         }
@@ -96,7 +96,7 @@
             margin-left: auto;
             margin-top: 30px;
             width: fit-content; 
-            background-color: var(--main_vv);
+            background-color: var(--main_em);
             &:disabled {
                 opacity: 0.4;
             }
@@ -118,7 +118,7 @@
             padding: 5px 10px;
             border-radius: 4px;
             //background-color: var(--inputs-bg);
-            border: 1px solid var(--main_vv);
+            border: 1px solid var(--main_em);
             background-color: var(--text_contrast);
             color: var(--text);
             transition: background-color 1s, border 1s;
