--- a/src/pages/Admin/ContentCreator/content-creator.scss
+++ b/src/pages/Admin/ContentCreator/content-creator.scss
@@ -21,7 +21,7 @@
 
             @include respond-to(md) {
                 grid-template-columns: 150px 1fr;
-                border-bottom: 1px solid var(--main_vv);
+                border-bottom: 1px solid var(--main_em);
                 margin-top: 30px;
                 padding-bottom: 35px;
 
@@ -161,14 +161,14 @@
             margin-right: auto;
             margin-left: auto;
             margin-top: 40px;
-            background-color: var(--main_vv);
-            color: var(--text_vv);
+            background-color: var(--main_em);
+            color: var(--text_reverse);
         }
 
         & .post {
             margin-left: auto;
-            background-color: var(--main_vv);
-            color: var(--text_vv);
+            background-color: var(--main_em);
+            color: var(--text_reverse);
             margin-top: 30px;
             width: fit-content; 
 
