--- a/src/pages/Admin/creator.scss
+++ b/src/pages/Admin/creator.scss
@@ -20,7 +20,7 @@
 
             @include respond-to(md) {
                 grid-template-columns: 150px 1fr;
-                border-bottom: 1px solid var(--main_vv);
+                border-bottom: 1px solid var(--main_em);
                 margin-top: 30px;
                 padding-bottom: 35px;
 
@@ -123,7 +123,7 @@
                 @include respond-to(md) {
                     grid-template-columns: 1fr 1fr 40px;
                     gap: 20px 20px;
-                    border-bottom: 1px solid var(--main_vv);
+                    border-bottom: 1px solid var(--main_em);
                     padding-bottom: 20px;
 
                     &:last-child {
@@ -253,8 +253,8 @@
 
         & .post {
             margin-left: auto;
-            background-color: var(--main_vv);
-            color: var(--text_vv);
+            background-color: var(--main_em);
+            color: var(--text_reverse);
             margin-top: 30px;
             width: fit-content; 
 
