--- a/src/pages/Catalog/catalog.scss
+++ b/src/pages/Catalog/catalog.scss
@@ -8,7 +8,7 @@
         & > h2 {
             text-align: center;
             margin-top: 140px;
-            color: var(--main_vv);
+            color: var(--main_em);
             margin-left: 150px;
 
             @include respond-to(sm) {
