--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -34,7 +34,7 @@
             margin-top: 80px;
             //font-family: Arial, Helvetica, sans-serif;
             text-align: center;
-            color: var(--main_vv);
+            color: var(--main_em);
 
         }
 
