--- a/src/pages/Orders/orders.scss
+++ b/src/pages/Orders/orders.scss
@@ -159,7 +159,7 @@
                     width: 100%;
                     display: grid;
                     grid-template-columns: 1fr 1fr 1fr;
-                    border: 1px solid var(--main_vv);
+                    border: 1px solid var(--main_em);
                     border-radius: 10px;
                     //padding: 20px;
     
