--- a/src/partials/Footer/footer.scss
+++ b/src/partials/Footer/footer.scss
@@ -3,13 +3,13 @@
 
 footer {
     width: 100%;
-    height: 60px;
+    height: 50px;
     background-color: var(--main);
     transition: background-color $transition-theme;
     
     @include respond-to(sm) {
         height: auto;
-        padding: 30px 0;
+        padding: 10px 0;
     }
 
     & .footer__content {
@@ -28,12 +28,17 @@ footer {
         & .footer__copyright {
             color: var(--text);
             transition: color $transition-theme;
-            font-size: 18px;
-            font-weight: 700;
+            font-size: 1rem;
+            font-weight: 600;
             text-align: center;
+
+            @include respond-to(sm) {
+                font-size: 0.8rem;
+            }
             
             @include respond-to(xs) {
-                margin-top: 30px;
+                margin-top: 10px;
+                font-size: 0.7rem;
             }
         }
 
@@ -44,15 +49,29 @@ footer {
 
             @include respond-to(sm) {
                 flex-direction: column;
-                gap: 20px;
+                gap: 10px;
+                margin-right: 40px;
+            }
+
+            @include respond-to(xs) {
+                margin-right: 0px;
             }
             
             & > span {
-                font-size: 18px;
+                font-size: 1rem;
                 color: var(--text);
                 transition: color $transition-theme;
-                font-weight: 700;
+                font-weight: 600;
                 text-align: center;
+
+                @include respond-to(sm) {
+                    font-size: 0.9rem;
+                }
+
+                @include respond-to(xs) {
+                    font-size: 0.8rem;
+                }
+
             }
 
 
@@ -65,11 +84,11 @@ footer {
                 }
                 
                 & a {
-                    height: 30px;
+                    height: 25px;
                     width: auto;
 
                     @include respond-to(sm) {
-                        height: 40px;
+                        height: 25px;
                     }
 
                     & > img {
